[package]
name = "pixelroxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
uuid = { version = "1.9.1", features = ["v4"] }
flate2 = "1.0"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
rand = "0.9.0-alpha.1"




[profile.release]
lto = true

[build-dependencies]
embed-resource = "2.4.2"

